--- a/sass/_catalog.sass
+++ b/sass/_catalog.sass
@@ -207,6 +207,9 @@
 		left: 0  
 		right: 0 
 		overflow: hidden
+		+r(step2)
+			position: relative
+			text-align: left
 	.product__nav
 		// position: absolute
 		bottom: 0
